99_yaml_Dockerfile/02_k8s-yaml/ty_app/ty-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ty-app-dp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ty-app-flask
  template:
    metadata:
      labels:
        app: ty-app-flask
    spec:
      containers:
      - name: ty-app-flask
        image: harbor.ty.com/public/ty_lb
        ports:
        - containerPort: 5000
          name: flask
