99_yaml_Dockerfile/02_k8s-yaml/ty_app/ty-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ty-app-svc # service的名字
spec:
  selector:
    app: ty-app-flask # service选择的标签
  ports:
  - name: http
    port: 5000 # 对外暴露的端口
    protocol: TCP
