99_yaml_Dockerfile/02_k8s-yaml/ty_app/ty-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ty-app-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: app.ty.com
    http:
      paths:
      - backend:
          service:
            name: ty-app-svc
            port:
              number: 5000
        path: /
        pathType: Prefix
